[gd_scene load_steps=2 format=3 uid="uid://c1wkbv6xjyqg"]

[ext_resource type="Script" path="res://Scripts/UI/menu_settings.gd" id="1_abcde"]

[node name="MenuSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abcde")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = tr("UI_SETTINGS")
horizontal_alignment = 1

[node name="TabContainer" type="TabContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Video" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer"]
name = tr("UI_VIDEO")
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ResolutionHBox" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Video"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Video/ResolutionHBox"]
layout_mode = 2
text = tr("UI_RESOLUTION")

[node name="ResolutionOptionButton" type="OptionButton" parent="Panel/VBoxContainer/TabContainer/Video/ResolutionHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FullscreenCheckBox" type="CheckBox" parent="Panel/VBoxContainer/TabContainer/Video"]
layout_mode = 2
text = tr("UI_FULLSCREEN")

[node name="VSyncCheckBox" type="CheckBox" parent="Panel/VBoxContainer/TabContainer/Video"]
layout_mode = 2
text = tr("UI_VSYNC")

[node name="FPSLimitHBox" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Video"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Video/FPSLimitHBox"]
layout_mode = 2
text = tr("UI_FPS_LIMIT")

[node name="FPSLimitOptionButton" type="OptionButton" parent="Panel/VBoxContainer/TabContainer/Video/FPSLimitHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Audio" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer"]
visible = false
name = tr("UI_AUDIO")
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MasterLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Audio"]
layout_mode = 2
text = tr("UI_MASTER_VOLUME")
horizontal_alignment = 1

[node name="MasterHSlider" type="HSlider" parent="Panel/VBoxContainer/TabContainer/Audio"]
layout_mode = 2
min_value = 0.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Audio"]
layout_mode = 2
text = tr("UI_MUSIC_VOLUME")
horizontal_alignment = 1

[node name="MusicHSlider" type="HSlider" parent="Panel/VBoxContainer/TabContainer/Audio"]
layout_mode = 2
min_value = 0.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="SfxLabel" type="Label" parent="Panel/VBoxContainer/TabContainer/Audio"]
layout_mode = 2
text = tr("UI_SFX_VOLUME")
horizontal_alignment = 1

[node name="SfxHSlider" type="HSlider" parent="Panel/VBoxContainer/TabContainer/Audio"]
layout_mode = 2
min_value = 0.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
alignment = 2

[node name="ApplyButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = tr("UI_APPLY")

[node name="BackButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = tr("UI_BACK")
